--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<!-- Global -->
+
+    <!-- Global -->
     <string name="app_name">To-Do List</string>
-    
+
     <!-- MainActivity -->
     <string name="menu_about">About</string>
     <string name="button_add_title">New Task</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_about">About</string>
+    
+    <!-- AboutActivity -->
+    <string name="robin">UI Development</string>
+    <string name="felix">Logic Development</string>
+    <string name="alex">Logic Development</string>
 
 </resources>
