--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="button_add_title">New Task</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_about">About</string>
+    <string name="dialog_message">Delete or edit the task?</string>
+    <string name="dialog_positive">Remove</string>
+    <string name="dialog_neutal">Edit</string>
+    <string name="dialog_negative">Cancel</string>
 
     <!-- AboutActivity -->
     <string name="robin">UI Development</string>
