--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <!-- MainActivity -->
     <string name="menu_about">About</string>
     <string name="button_add_title">New Task</string>
+    <string name="button_account_title">Choose Account to Sync</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_about">About</string>
     <string name="dialog_message">Delete or edit the task?</string>
